--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 version: "2"
 services:
-  reference-ui:
+
+  mw-reference-ui:
     image: openlmis/dev-ui:3-SNAPSHOT
     working_dir: /app
     volumes:
@@ -27,38 +28,47 @@ services:
       - stockmanagement-ui
       - ui-components
       - ui-layout
+
   auth-ui:
     image: openlmis/auth-ui:4.0.1-SNAPSHOT
     volumes:
       - '/openlmis-auth-ui'
+
   fulfillment-ui:
     image: openlmis/fulfillment-ui:4.0.1-SNAPSHOT
     volumes:
       - '/openlmis-fulfillment-ui'
+
   referencedata-ui:
     image: openlmis/referencedata-ui:4.1.0-SNAPSHOT
     volumes:
       - '/openlmis-referencedata-ui'
+
   report-ui:
     image: openlmis/report-ui:4.0.1-SNAPSHOT
     volumes:
       - '/openlmis-report-ui'
+
   requisition-ui:
     image: openlmis/requisition-ui:4.0.1-SNAPSHOT
     volumes:
       - '/openlmis-requisition-ui'
+
   stockmanagement-ui:
     image: openlmis/stockmanagement-ui:4.0.0-SNAPSHOT
     volumes:
      - '/openlmis-stockmanagement-ui'
+
   ui-components:
     image: openlmis/ui-components:4.0.1-SNAPSHOT
     volumes:
       - '/openlmis-ui-components'
+
   ui-layout:
     image: openlmis/ui-layout:4.1.0-SNAPSHOT
     volumes:
       - '/openlmis-ui-layout'
+
   image:
     build: .
-    image: openlmis/reference-ui
+    image: openlmismw/reference-ui
