--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "openlmis-requisition-ui",
-  "version": "3.0.0-beta-SNAPSHOT",
+  "name": "openlmis-mw-reference-ui",
+  "version": "1.0.0-SNAPSHOT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/OpenLMIS/openlmis-requisition-refUI"
+    "url": "https://github.com/OpenLMIS/mw-reference-ui"
   },
   "license": "AGPL-3.0",
   "devDependencies": {
