Included malawi reporting service in reference ui

--- a/config.json
+++ b/config.json
@@ -8,5 +8,6 @@
     "/openlmis-fulfillment-ui",
     "/openlmis-requisition-ui",
     "/openlmis-stockmanagement-ui"
-  ]
+  ],
+  "REPORTING_SERVICES": "requisitions,malawi"
 }
