MW-81: Changed program warning code to "tb"

--- a/config.json
+++ b/config.json
@@ -10,6 +10,6 @@
     "/openlmis-stockmanagement-ui"
   ],
   "REPORTING_SERVICES": "requisitions,malawi",
-  "requisitionWarningProgramCode": "PRG001",
+  "requisitionWarningProgramCode": "tb",
   "requisitionWarningPeriods": "Apr,Jul,Oct,Jan"
 }
