MW-81: Changed warning periods to correct months

--- a/config.json
+++ b/config.json
@@ -11,5 +11,5 @@
   ],
   "REPORTING_SERVICES": "requisitions,malawi",
   "requisitionWarningProgramCode": "tb",
-  "requisitionWarningPeriods": "Apr,Jul,Oct,Jan"
+  "requisitionWarningPeriods": "Feb,Mar,May,Jun,Aug,Sep,Nov,Dec"
 }
