Changed UI currency to Malawian kwacha
Since currency is currently not configurable in the backend, the decision was made to change it in the UI config file.
LoginService used to call backend for currency settings and if that API call failed it then used config file.
Now, in the mw-reference-ui LoginService always takes currency settings from the config file.

--- a/config.json
+++ b/config.json
@@ -11,5 +11,8 @@
   ],
   "REPORTING_SERVICES": "requisitions,malawi",
   "requisitionWarningProgramCode": "tb",
-  "requisitionWarningPeriods": "Feb,Mar,May,Jun,Aug,Sep,Nov,Dec"
+  "requisitionWarningPeriods": "Feb,Mar,May,Jun,Aug,Sep,Nov,Dec",
+  "currencyCode": "MWK",
+  "currencySymbol": "MK",
+  "currencySymbolSide": "right"
 }
