--- a/config.json
+++ b/config.json
@@ -11,8 +11,5 @@
   ],
   "REPORTING_SERVICES": "requisitions,malawi",
   "requisitionWarningProgramCode": "tb",
-  "requisitionWarningPeriods": "Feb,Mar,May,Jun,Aug,Sep,Nov,Dec",
-  "currencyCode": "MWK",
-  "currencySymbol": "MK",
-  "currencySymbolSide": "right"
+  "requisitionWarningPeriods": "Feb,Mar,May,Jun,Aug,Sep,Nov,Dec"
 }
