MW-176 Use latest fulfillment-ui
We need this to incorporate an emergency fix

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,7 +33,7 @@ services:
       - '/openlmis-auth-ui'
 
   fulfillment-ui:
-    image: openlmis/fulfillment-ui:5.0.0
+    image: openlmis/fulfillment-ui:5.0.1-SNAPSHOT
     volumes:
       - '/openlmis-fulfillment-ui'
 
