MW-252: Updated application title to "Malawi OpenLMIS"

--- a/config.json
+++ b/config.json
@@ -14,5 +14,7 @@
   "requisitionWarningPeriods": "Feb,Mar,May,Jun,Aug,Sep,Nov,Dec",
   "currencyCode": "MWK",
   "currencySymbol": "MK",
-  "currencySymbolSide": "right"
+  "currencySymbolSide": "right",
+  "applicationLoadingMessage": "Starting Malawi OpenLMIS",
+  "applicationTitle": "Malawi OpenLMIS"
 }
