--- a/docker-compose-production.yml
+++ b/docker-compose-production.yml
@@ -15,6 +15,7 @@ services:
       - fulfillment-ui
       - referencedata-ui
       - requisition-ui
+      - stockmanagement-ui
       - report-ui
       - ui-components
       - ui-layout
@@ -23,12 +24,13 @@ services:
       - fulfillment-ui
       - referencedata-ui
       - requisition-ui
+      - stockmanagement-ui
       - report-ui
       - ui-components
       - ui-layout
 
   auth-ui:
-    image: openlmis/auth-ui:5.0.2
+    image: openlmis/auth-ui:5.0.3
     volumes:
       - '/openlmis-auth-ui'
 
@@ -42,23 +44,28 @@ services:
     volumes:
       - '/openlmis-referencedata-ui'
 
+  stockmanagement-ui:
+    image: openlmis/stockmanagement-ui:1.0.0
+    volumes:
+      - '/openlmis-stockmanagement-ui'
+
   report-ui:
-    image: openlmis/report-ui:5.0.2
+    image: openlmis/report-ui:5.0.3
     volumes:
       - '/openlmis-report-ui'
 
   requisition-ui:
-    image: openlmis/requisition-ui:5.1.0
+    image: openlmis/requisition-ui:5.1.1
     volumes:
       - '/openlmis-requisition-ui'
 
   ui-components:
-    image: openlmis/ui-components:5.1.0
+    image: openlmis/ui-components:5.1.1
     volumes:
       - '/openlmis-ui-components'
 
   ui-layout:
-    image: openlmis/ui-layout:5.0.1
+    image: openlmis/ui-layout:5.0.2
     volumes:
       - '/openlmis-ui-layout'
 
