--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,11 @@
 {
   "name": "mw-reference-ui",
   "dependencies": {
-    "perfect-scrollbar": "^0.7.0"
+    "perfect-scrollbar": "^0.7.0",
+	"angular": "1.6.6"
+  },
+  "resolutions": {
+    "angular": "1.6.6"
   },
   "overrides": {
   	"perfect-scrollbar": {
