Revert "MW-419: Change requisition-ui to Malawi's fork"
This reverts commit a770e1b22ba381df1dfd5f8cd7d7299ca9412aed.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -55,7 +55,7 @@ services:
       - '/openlmis-report-ui'
 
   requisition-ui:
-    image: openlmismw/requisition-ui:5.2.2-SNAPSHOT
+    image: openlmis/requisition-ui:5.2.1
     volumes:
       - '/openlmis-requisition-ui'
 
