--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mw-ui",
-  "version": "1.3.0",
+  "version": "1.3.1-SNAPSHOT",
   "repository": {
     "type": "git",
     "url": "https://github.com/OpenLMIS-Malawi/mw-ui"
