Add cce-ui component

--- a/docker-compose-production.yml
+++ b/docker-compose-production.yml
@@ -56,6 +56,11 @@ services:
     volumes:
       - '/openlmis-report-ui'
 
+  cce-ui:
+    image: openlmis/cce-ui:1.0.0
+    volumes:
+     - '/openlmis-cce-ui'
+
   requisition-ui:
     image: openlmis/requisition-ui:5.3.1
     volumes:
