--- a/bower.json
+++ b/bower.json
@@ -6,7 +6,7 @@
     "autosize-input": "https://raw.githubusercontent.com/yuanqing/autosize-input/cf73892e1b9ceff448c7ea5f4a41b4b8a6a3991c/autosize-input.min.js"
   },
   "resolutions": {
-    "angular": "^1.7.2",
+    "angular": "1.6.6",
     "angular-animate": "^1.7.2",
     "angular-aria": "^1.7.2",
     "angular-messages": "^1.7.2"
