--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "2"
 services:
 
   mw-ui:
-    image: openlmis/dev-ui:8.0.0-SNAPSHOT
+    image: openlmis/dev-ui:8.0.0-RC2
     working_dir: /app
     volumes:
       - '.:/app'
@@ -32,47 +32,47 @@ services:
       - ui-layout
 
   auth-ui:
-    image: openlmis/auth-ui:6.1.1-RC1
+    image: openlmis/auth-ui:6.1.1-RC2
     volumes:
       - '/openlmis-auth-ui'
 
   fulfillment-ui:
-    image: openlmis/fulfillment-ui:6.0.1-RC1
+    image: openlmis/fulfillment-ui:6.0.1-RC2
     volumes:
       - '/openlmis-fulfillment-ui'
 
   referencedata-ui:
-    image: openlmis/referencedata-ui:5.4.0-RC1
+    image: openlmis/referencedata-ui:5.4.0-RC2
     volumes:
       - '/openlmis-referencedata-ui'
 
   stockmanagement-ui:
-    image: openlmis/stockmanagement-ui:2.0.0-RC1
+    image: openlmis/stockmanagement-ui:2.0.0-RC2
     volumes:
       - '/openlmis-stockmanagement-ui'
 
   cce-ui:
-    image: openlmis/cce-ui:1.0.1-RC1
+    image: openlmis/cce-ui:1.0.1-RC2
     volumes:
      - '/openlmis-cce-ui'
 
   report-ui:
-    image: openlmis/report-ui:5.0.6-RC1
+    image: openlmis/report-ui:5.0.6-RC2
     volumes:
       - '/openlmis-report-ui'
 
   requisition-ui:
-    image: openlmis/requisition-ui:5.4.0-RC1
+    image: openlmis/requisition-ui:5.4.0-RC2
     volumes:
       - '/openlmis-requisition-ui'
 
   ui-components:
-    image: openlmis/ui-components:6.0.0-RC1
+    image: openlmis/ui-components:6.0.0-RC2
     volumes:
       - '/openlmis-ui-components'
 
   ui-layout:
-    image: openlmis/ui-layout:5.1.1-RC1
+    image: openlmis/ui-layout:5.1.1-RC2
     volumes:
       - '/openlmis-ui-layout'
 
