--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,47 +32,47 @@ services:
       - ui-layout
 
   auth-ui:
-    image: openlmis/auth-ui:6.1.1
+    image: openlmis/auth-ui:6.1.3-RC1
     volumes:
       - '/openlmis-auth-ui'
 
   fulfillment-ui:
-    image: openlmis/fulfillment-ui:6.0.1
+    image: openlmis/fulfillment-ui:6.0.2-RC1
     volumes:
       - '/openlmis-fulfillment-ui'
 
   referencedata-ui:
-    image: openlmis/referencedata-ui:5.4.0
+    image: openlmis/referencedata-ui:5.5.0-RC1
     volumes:
       - '/openlmis-referencedata-ui'
 
   stockmanagement-ui:
-    image: openlmis/stockmanagement-ui:2.0.0
+    image: openlmis/stockmanagement-ui:2.0.2-RC1
     volumes:
       - '/openlmis-stockmanagement-ui'
 
   cce-ui:
-    image: openlmis/cce-ui:1.0.1
+    image: openlmis/cce-ui:1.0.2-RC1
     volumes:
      - '/openlmis-cce-ui'
 
   report-ui:
-    image: openlmis/report-ui:5.0.6
+    image: openlmis/report-ui:5.1.0-RC1
     volumes:
       - '/openlmis-report-ui'
 
   requisition-ui:
-    image: openlmis/requisition-ui:5.4.0
+    image: openlmis/requisition-ui:5.5.0-RC1
     volumes:
       - '/openlmis-requisition-ui'
 
   ui-components:
-    image: openlmis/ui-components:6.0.0
+    image: openlmis/ui-components:7.0.0-RC1
     volumes:
       - '/openlmis-ui-components'
 
   ui-layout:
-    image: openlmis/ui-layout:5.1.1
+    image: openlmis/ui-layout:5.1.2-RC1
     volumes:
       - '/openlmis-ui-layout'
 
