--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mw-ui",
-  "version": "1.3.1-SNAPSHOT",
+  "version": "1.5.0",
   "repository": {
     "type": "git",
     "url": "https://github.com/OpenLMIS-Malawi/mw-ui"
@@ -8,6 +8,9 @@
   "license": "AGPL-3.0",
   "devDependencies": {
     "openlmis-ui": "file:///dev-ui"
+  },
+  "scripts": {
+    "postinstall": "cp -nr node_modules/dev-ui/node_modules ."
   },
   "dependencies": {}
 }
