Added yarn.lock, .npmrc and disabled ESLint

--- a/config.json
+++ b/config.json
@@ -16,5 +16,6 @@
   "currencySymbol": "MK",
   "currencySymbolSide": "right",
   "applicationLoadingMessage": "Starting Malawi OpenLMIS",
-  "applicationTitle": "Malawi OpenLMIS"
+  "applicationTitle": "Malawi OpenLMIS",
+  "noLint": true
 }
