--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "2"
 services:
 
   mw-ui:
-    image: openlmis/dev-ui:8.1.0
+    image: openlmis/dev-ui:9.0.0-RC1
     working_dir: /app
     volumes:
       - '.:/app'
@@ -32,27 +32,27 @@ services:
       - ui-layout
 
   auth-ui:
-    image: openlmis/auth-ui:6.1.3
+    image: openlmis/auth-ui:6.2.0-RC1
     volumes:
       - '/openlmis-auth-ui'
 
   fulfillment-ui:
-    image: openlmis/fulfillment-ui:6.0.2
+    image: openlmis/fulfillment-ui:6.0.3-RC1
     volumes:
       - '/openlmis-fulfillment-ui'
 
   referencedata-ui:
-    image: openlmis/referencedata-ui:5.5.0
+    image: openlmis/referencedata-ui:5.5.1-RC1
     volumes:
       - '/openlmis-referencedata-ui'
 
   stockmanagement-ui:
-    image: openlmis/stockmanagement-ui:2.0.2
+    image: openlmis/stockmanagement-ui:2.0.3-RC1
     volumes:
       - '/openlmis-stockmanagement-ui'
 
   cce-ui:
-    image: openlmis/cce-ui:1.0.2
+    image: openlmis/cce-ui:1.0.3-RC1
     volumes:
      - '/openlmis-cce-ui'
 
@@ -62,17 +62,17 @@ services:
       - '/openlmis-report-ui'
 
   requisition-ui:
-    image: openlmis/requisition-ui:5.5.0
+    image: openlmis/requisition-ui:6.0.0-RC1
     volumes:
       - '/openlmis-requisition-ui'
 
   ui-components:
-    image: openlmis/ui-components:7.0.0
+    image: openlmis/ui-components:7.1.0-RC1
     volumes:
       - '/openlmis-ui-components'
 
   ui-layout:
-    image: openlmis/ui-layout:5.1.2
+    image: openlmis/ui-layout:5.1.3-RC1
     volumes:
       - '/openlmis-ui-layout'
 
