--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,7 @@ services:
       - cce-ui
       - ui-components
       - ui-layout
+      - dhis2-integration-ui
     depends_on:
       - auth-ui
       - fulfillment-ui
@@ -30,6 +31,7 @@ services:
       - cce-ui
       - ui-components
       - ui-layout
+      - dhis2-integration-ui
 
   auth-ui:
     image: openlmis/auth-ui:6.2.0
@@ -75,6 +77,11 @@ services:
     image: openlmis/ui-layout:5.1.3
     volumes:
       - '/openlmis-ui-layout'
+
+  dhis2-integration-ui:
+    image: openlmismw/dhis2-integration-ui
+    volumes:
+      - '/dhis2-integration-ui'
 
   image:
     build: .
