--- a/config.json
+++ b/config.json
@@ -7,7 +7,8 @@
     "/openlmis-report-ui",
     "/openlmis-fulfillment-ui",
     "/openlmis-requisition-ui",
-    "/openlmis-stockmanagement-ui"
+    "/openlmis-stockmanagement-ui",
+    "/dhis2-integration-ui"
   ],
   "REPORTING_SERVICES": "requisitions,malawi",
   "requisitionWarningProgramCode": "tb",
