--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,47 +34,47 @@ services:
       - mw-dhis2-integration-ui
 
   auth-ui:
-    image: openlmis/auth-ui:6.2.2
+    image: openlmis/auth-ui:6.2.3-RC1
     volumes:
       - '/openlmis-auth-ui'
 
   fulfillment-ui:
-    image: openlmis/fulfillment-ui:6.0.5
+    image: openlmis/fulfillment-ui:6.0.6-RC1
     volumes:
       - '/openlmis-fulfillment-ui'
 
   referencedata-ui:
-    image: openlmis/referencedata-ui:5.6.1
+    image: openlmis/referencedata-ui:5.6.2-RC1
     volumes:
       - '/openlmis-referencedata-ui'
 
   stockmanagement-ui:
-    image: openlmis/stockmanagement-ui:2.0.5
+    image: openlmis/stockmanagement-ui:2.0.6-RC1
     volumes:
       - '/openlmis-stockmanagement-ui'
 
   cce-ui:
-    image: openlmis/cce-ui:1.0.5
+    image: openlmis/cce-ui:1.0.6-RC1
     volumes:
      - '/openlmis-cce-ui'
 
   report-ui:
-    image: openlmis/report-ui:5.2.2
+    image: openlmis/report-ui:5.2.3-RC1
     volumes:
       - '/openlmis-report-ui'
 
   requisition-ui:
-    image: openlmis/requisition-ui:7.0.1
+    image: openlmis/requisition-ui:7.0.2-RC1
     volumes:
       - '/openlmis-requisition-ui'
 
   ui-components:
-    image: openlmis/ui-components:7.2.1
+    image: openlmis/ui-components:7.2.2-RC1
     volumes:
       - '/openlmis-ui-components'
 
   ui-layout:
-    image: openlmis/ui-layout:5.1.5
+    image: openlmis/ui-layout:5.1.6-RC1
     volumes:
       - '/openlmis-ui-layout'
 
