--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,52 +34,52 @@ services:
       - mw-dhis2-integration-ui
 
   auth-ui:
-    image: openlmis/auth-ui:6.2.5-RC2
+    image: openlmis/auth-ui:6.2.5
     volumes:
       - '/openlmis-auth-ui'
 
   fulfillment-ui:
-    image: openlmis/fulfillment-ui:6.0.8-RC3
+    image: openlmis/fulfillment-ui:6.0.8
     volumes:
       - '/openlmis-fulfillment-ui'
 
   referencedata-ui:
-    image: openlmis/referencedata-ui:5.6.4-RC2
+    image: openlmis/referencedata-ui:5.6.4
     volumes:
       - '/openlmis-referencedata-ui'
 
   stockmanagement-ui:
-    image: openlmis/stockmanagement-ui:2.0.8-RC3
+    image: openlmis/stockmanagement-ui:2.0.8
     volumes:
       - '/openlmis-stockmanagement-ui'
 
   cce-ui:
-    image: openlmis/cce-ui:1.0.8-RC2
+    image: openlmis/cce-ui:1.0.8
     volumes:
      - '/openlmis-cce-ui'
 
   report-ui:
-    image: openlmis/report-ui:5.2.5-RC2
+    image: openlmis/report-ui:5.2.5
     volumes:
       - '/openlmis-report-ui'
 
   requisition-ui:
-    image: openlmis/requisition-ui:7.0.4-RC3
+    image: openlmis/requisition-ui:7.0.4
     volumes:
       - '/openlmis-requisition-ui'
 
   ui-components:
-    image: openlmis/ui-components:7.2.4-RC2
+    image: openlmis/ui-components:7.2.4
     volumes:
       - '/openlmis-ui-components'
 
   ui-layout:
-    image: openlmis/ui-layout:5.1.8-RC2
+    image: openlmis/ui-layout:5.1.8
     volumes:
       - '/openlmis-ui-layout'
 
   mw-dhis2-integration-ui:
-    image: openlmismw/dhis2-integration-ui:1.0.1-SNAPSHOT
+    image: openlmismw/dhis2-integration-ui:1.0.0
     volumes:
       - '/mw-dhis2-integration-ui'
 
