Revert "MALAWISUP-2731: Updated dhis2-integration-ui version to snapshot"
This reverts commit 09c90f2ba0b94615ff5f9a8aaca9b99b05abf307.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -86,7 +86,7 @@ services:
       - '/openlmis-offline-ui'
 
   mw-dhis2-integration-ui:
-    image: openlmismw/dhis2-integration-ui:1.0.1-SNAPSHOT
+    image: openlmismw/dhis2-integration-ui:1.0.0
     volumes:
       - '/mw-dhis2-integration-ui'
 
