MALAWISUP-2837: Updated versions of the UI services from 3.11 release

--- a/config.json
+++ b/config.json
@@ -8,6 +8,7 @@
     "/openlmis-fulfillment-ui",
     "/openlmis-requisition-ui",
     "/openlmis-stockmanagement-ui",
+    "/openlmis-offline-ui",
     "/mw-dhis2-integration-ui"
   ],
   "REPORTING_SERVICES": "requisitions,malawi",
