--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "2"
 services:
 
   mw-ui:
-    image: openlmis/dev-ui:9.0.2-RC1
+    image: openlmis/dev-ui:9.0.2
     working_dir: /app
     volumes:
       - '.:/app'
@@ -36,52 +36,52 @@ services:
       - mw-dhis2-integration-ui
 
   auth-ui:
-    image: openlmis/auth-ui:6.2.6-RC1
+    image: openlmis/auth-ui:6.2.6
     volumes:
       - '/openlmis-auth-ui'
 
   fulfillment-ui:
-    image: openlmis/fulfillment-ui:6.0.9-RC1
+    image: openlmis/fulfillment-ui:6.0.9
     volumes:
       - '/openlmis-fulfillment-ui'
 
   referencedata-ui:
-    image: openlmis/referencedata-ui:5.6.5-RC1
+    image: openlmis/referencedata-ui:5.6.5
     volumes:
       - '/openlmis-referencedata-ui'
 
   stockmanagement-ui:
-    image: openlmis/stockmanagement-ui:2.0.9-RC1
+    image: openlmis/stockmanagement-ui:2.0.9
     volumes:
       - '/openlmis-stockmanagement-ui'
 
   cce-ui:
-    image: openlmis/cce-ui:1.0.9-RC1
+    image: openlmis/cce-ui:1.0.9
     volumes:
      - '/openlmis-cce-ui'
 
   report-ui:
-    image: openlmis/report-ui:5.2.6-RC1
+    image: openlmis/report-ui:5.2.6
     volumes:
       - '/openlmis-report-ui'
 
   requisition-ui:
-    image: openlmis/requisition-ui:7.0.5-RC1
+    image: openlmis/requisition-ui:7.0.5
     volumes:
       - '/openlmis-requisition-ui'
 
   ui-components:
-    image: openlmis/ui-components:7.2.5-RC1
+    image: openlmis/ui-components:7.2.5
     volumes:
       - '/openlmis-ui-components'
 
   ui-layout:
-    image: openlmis/ui-layout:5.1.9-RC1
+    image: openlmis/ui-layout:5.1.9
     volumes:
       - '/openlmis-ui-layout'
 
   offline-ui:
-    image: openlmis/offline-ui:1.0.0-RC1
+    image: openlmis/offline-ui:1.0.0
     volumes:
       - '/openlmis-offline-ui'
 
